Ajout css pour hyperlink; Commit checkpoint avant changements header

--- a/miage-code-crafting/src/main/java/com/mcc/projet/Application.css
+++ b/miage-code-crafting/src/main/java/com/mcc/projet/Application.css
@@ -34,3 +34,11 @@ Label {
 	font-family: 'Consolas';
 	-fx-font-family: 'Consolas';
 }
+.hyperlink {
+	-fx-text-fill: rgb(232, 204, 167); /* Couleur du texte du lien */
+	-fx-underline: true;   /* Soulignement du lien */
+	font-size: 16px;
+	-fx-font-size: 16px;
+	font-style: italic;
+	-fx-font-style: italic;
+}
